--- a/YouTube.Plumbing/Areas/Admin/Views/_ViewImports.cshtml
+++ b/YouTube.Plumbing/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using EntityLayer.WebApplication.ViewModels.AboutVM;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using EntityLayer.WebApplication.ViewModels.Category;
+@using EntityLayer.WebApplication.ViewModels.Contact;
