--- a/YouTube.Plumbing/Areas/Admin/Views/_ViewImports.cshtml
+++ b/YouTube.Plumbing/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,3 +2,5 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using EntityLayer.WebApplication.ViewModels.Category;
 @using EntityLayer.WebApplication.ViewModels.Contact;
+@using EntityLayer.WebApplication.ViewModels.HomePage;
+@using EntityLayer.WebApplication.ViewModels.Portfolio;
