--- a/YouTube.Plumbing/Areas/Admin/Views/Portfolio/UpdatePortfolio.cshtml
+++ b/YouTube.Plumbing/Areas/Admin/Views/Portfolio/UpdatePortfolio.cshtml
@@ -23,7 +23,7 @@
 <!-- Card with an image on top -->
 <div class="card">
     <img src="~/Admin/assets/img/card.jpg" class="card-img-top" alt="...">
-    
+
 </div><!-- End Card with an image on top -->
 
 
@@ -37,16 +37,19 @@
             <input type="hidden" asp-for="FileType" value="test" />
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="RowVersion" />
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="col-md-12">
                 <div class="form-floating">
                     <input asp-for="Title" type="text" class="form-control" placeholder="Header">
+                    <span asp-validation-for="Title" class="text-danger"></span>
                     <label asp-for="Title">Header</label>
                 </div>
             </div>
             <div class="col-md-12">
                 <div class="form-floating">
-                    <textarea asp-for="Category.Name" type="text" class="form-control" placeholder="Category.Name"></textarea>
+                    <input asp-for="Category.Name" type="text" class="form-control" placeholder="Category.Name">
+                    <span asp-validation-for="Category.Name" class="text-danger"></span>
                     <label asp-for="Category.Name">Call</label>
                 </div>
             </div>
