--- a/YouTube.Plumbing/Views/_ViewImports.cshtml
+++ b/YouTube.Plumbing/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using YouTube.Plumbing
 @using YouTube.Plumbing.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using EntityLayer.Identity.ViewModels;
