--- a/YouTube.Plumbing/Views/Authentication/ResetPassword.cshtml
+++ b/YouTube.Plumbing/Views/Authentication/ResetPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model SignUpVM
+﻿@model ResetPasswordVM
+
 @{
     Layout = null;
 }
@@ -51,30 +52,19 @@
                                 <div class="card-body">
 
                                     <div class="pt-4 pb-2">
-                                        <h5 class="card-title text-center pb-0 fs-4">Create an Account</h5>
-                                        <p class="text-center small">Enter your personal details to create account</p>
+                                        <h5 class="card-title text-center pb-0 fs-4">Reset Password</h5>
+                                        <p class="text-center small">Enter new password for your account</p>
                                     </div>
                                     @if (!string.IsNullOrEmpty(ViewBag.Result))
                                     {
                                         <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                                            <div asp-validation-summary="All"></div> 
+                                            <div asp-validation-summary="All"></div>
                                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                                         </div>
-                                    }      
-                                   
-                                    <form class="row g-3" asp-controller="Authentication" asp-action="SignUp" method="post" >
-                                        
-                                        <div class="col-12">
-                                            <label asp-for="Username" class="form-label">Username</label>
-                                            <input asp-for="Username" type="text" class="form-control" >
-                                            <span asp-validation-for="Username" class="text-danger"></span>
-                                        </div>
+                                    }
 
-                                        <div class="col-12">
-                                            <label asp-for="Email" class="form-label">Email</label>
-                                            <input asp-for="Email" type="text" class="form-control">
-                                            <span asp-validation-for="Email" class="text-danger"></span>
-                                        </div>
+                                    <form class="row g-3" asp-controller="Authentication" asp-action="ResetPassword" method="post">
+                                                                              
                                         <div class="col-12">
                                             <label asp-for="Password" class="form-label">Password</label>
                                             <input asp-for="Password" type="password" class="form-control">
@@ -87,13 +77,11 @@
                                             <input asp-for="ConfirmPassword" type="password" class="form-control">
                                             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                                         </div>
-                                       
+
                                         <div class="col-12">
-                                            <button class="btn btn-primary w-100" type="submit">Create Account</button>
+                                            <button class="btn btn-primary w-100" type="submit">Renew Password</button>
                                         </div>
-                                        <div class="col-12">
-                                            <p class="small mb-0">Already have an account? <a asp-controller="Authentication" asp-action="LogIn">Log in</a></p>
-                                        </div>
+                                        
                                     </form>
 
                                 </div>
