--- a/YouTube.Plumbing/Areas/User/Views/Shared/_Layout.cshtml
+++ b/YouTube.Plumbing/Areas/User/Views/Shared/_Layout.cshtml
@@ -51,73 +51,22 @@
         <ul class="sidebar-nav" id="sidebar-nav">
 
             <li class="nav-item">
-                <a class="nav-link" asp-area="Admin" asp-controller="Dashboard" asp-action="Index">
+                <a class="nav-link" asp-area="User" asp-controller="Dashboard" asp-action="Index">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
             </li><!-- End Dashboard Nav -->
 
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-area="Admin" asp-controller="About" asp-action="GetAboutList">
-                    <i class="bi bi-building-fill"></i>
-                    <span>About</span>
-                </a>
-            </li><!-- End About Section -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-area="Admin" asp-controller="HomePage" asp-action="GetHomePageList">
-                    <i class="bi bi-house"></i>
-                    <span>Home Page</span>
-                </a>
-            </li><!-- End Hone Page Section -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-area="Admin" asp-controller="Service" asp-action="GetServiceList">
-                    <i class="bi bi-sliders2-vertical"></i>
-                    <span>Services</span>
-                </a>
-            </li><!-- End Hone Page Section -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-area="Admin" asp-controller="Team" asp-action="GetTeamList">
-                    <i class="bi bi-people-fill"></i>
-                    <span>Team</span>
-                </a>
-            </li><!-- End Hone Page Section -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-area="Admin" asp-controller="Testimonal" asp-action="GetTestimonalList">
-                    <i class="bi bi-chat-right-dots"></i>
-                    <span>Testimonals</span>
-                </a>
-            </li><!-- End Hone Page Section -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-area="Admin" asp-controller="Category" asp-action="GetCategoryList">
-                    <i class="bi bi-tags"></i>
-                    <span>Categories</span>
-                </a>
-            </li><!-- End Hone Page Section -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-area="Admin" asp-controller="Portfolio" asp-action="GetPortfolioList">
-                    <i class="bi bi-image"></i>
-                    <span>Portfolio</span>
-                </a>
-            </li><!-- End Hone Page Section -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-area="Admin" asp-controller="Contact" asp-action="GetContactList">
-                    <i class="bi bi-envelope"></i>
-                    <span>Contact</span>
-                </a>
-            </li><!-- End Hone Page Section -->
-
-
             <li class="nav-heading">Settings</li>
 
 
-
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#">
+                <a class="nav-link collapsed" asp-area="User" asp-controller="AuthenticationUser" asp-action="UserEdit">
                     <i class="bi bi-gear"></i>
                     <span>User Settings</span>
                 </a>
             </li><!-- End Blank Page Nav -->
-           
+
 
         </ul>
 
@@ -145,11 +94,6 @@
     <!-- Template Main JS File -->
     <script src="~/Admin/assets/js/main.js"></script>
 
-
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
 </body>
 
 </html>
