--- a/YouTube.Plumbing/Areas/User/Views/Shared/_Layout.cshtml
+++ b/YouTube.Plumbing/Areas/User/Views/Shared/_Layout.cshtml
@@ -48,6 +48,13 @@
     <!-- ======= Sidebar ======= -->
     <aside id="sidebar" class="sidebar">
 
+
+
+        <!-- i will add picture here-->
+
+        @await Component.InvokeAsync("Layout",ViewBag.Username);
+
+
         <ul class="sidebar-nav" id="sidebar-nav">
 
             <li class="nav-item">
