filter is going on

--- a/YouTube.Plumbing/Areas/Admin/Views/About/GetAboutList.cshtml
+++ b/YouTube.Plumbing/Areas/Admin/Views/About/GetAboutList.cshtml
@@ -128,4 +128,7 @@
     </section>
 
 }
-<a asp-area="Admin" asp-controller="About" asp-action="AddAbout" class="btn btn-success btn-sm">Add About Us</a>
+@if (!Model.Any())
+{
+    <a asp-area="Admin" asp-controller="About" asp-action="AddAbout" class="btn btn-success btn-sm">Add About Us</a>
+}
