--- a/YouTube.Plumbing/Areas/Admin/Views/Portfolio/AddPortfolio.cshtml
+++ b/YouTube.Plumbing/Areas/Admin/Views/Portfolio/AddPortfolio.cshtml
@@ -20,9 +20,7 @@
 <div class="card">
     <div class="card-body">
         <!-- Floating Labels Form -->
-        <form asp-area="Admin" asp-controller="Portfolio" asp-action="AddPortfolio" method="post" class="row g-3"  enctype="multipart/form-data">
-            <input type="hidden" asp-for="FileName" value="test" />
-            <input type="hidden" asp-for="FileType" value="test" />
+        <form asp-area="Admin" asp-controller="Portfolio" asp-action="AddPortfolio" method="post" class="row g-3" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="col-md-12">
@@ -34,7 +32,7 @@
             </div>
             <div class="col-md-12">
                 <div class="form-floating">
-                    <input asp-for="Category.Name" type="text" class="form-control" placeholder="Category.Name">
+                    <input asp-for="Category.Name" type="text" class="form-control" placeholder="Category Name">
                     <span asp-validation-for="Category.Name" class="text-danger"></span>
                     <label asp-for="Category.Name">Call</label>
                 </div>
@@ -51,7 +49,7 @@
             </div>
         </form><!-- End floating Labels Form -->
 
-        
+
 
     </div>
 </div>
