--- a/YouTube.Plumbing/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/YouTube.Plumbing/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
     <meta content="Plumber, Plumbing, Refurishment" name="keywords">
 
     <!-- Favicons -->
-    <link href="~/Admin/assets/img/favicon.png" rel="icon">
-    <link href="~/Admin/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="~/Admin/assets/img/folder.png" rel="icon">
+    <link href="~/Admin/assets/img/folder.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
@@ -35,15 +35,23 @@
 
     <!-- ======= Header ======= -->
     <header id="header" class="header fixed-top d-flex align-items-center">
-
+        
         <div class="d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center">
-                <img src="~/Admin/assets/img/logo.png" alt="">
-                <span class="d-none d-lg-block">NiceAdmin</span>
+                <img src="~/Admin/assets/img/folder.png" alt="Admin Panel">
+                <span class="d-none d-lg-block">@User.Identity!.Name</span>
             </a>
             <i class="bi bi-list toggle-sidebar-btn"></i>
+
         </div><!-- End Logo -->
 
+        <nav class="header-nav ms-auto">
+            <ul class="d-flex align-items-center">
+                <li> <a class="btn btn-outline-info me-2" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house-door"></i></a></li>
+                <li> <a class="btn btn-outline-warning me-2" asp-area="User" asp-controller="Dashboard" asp-action="Index"><i class="bi bi-person-bounding-box"></i></a></li>
+            </ul>
+        </nav><!-- End Icons Navigation -->
+                
     </header><!-- End Header -->
     <!-- ======= Sidebar ======= -->
     <aside id="sidebar" class="sidebar">
@@ -105,20 +113,6 @@
                     <span>Contact</span>
                 </a>
             </li><!-- End Hone Page Section -->
-
-
-            <li class="nav-heading">Settings</li>
-
-
-
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#">
-                    <i class="bi bi-gear"></i>
-                    <span>User Settings</span>
-                </a>
-            </li><!-- End Blank Page Nav -->
-           
-
         </ul>
 
     </aside><!-- End Sidebar-->
@@ -149,7 +143,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    @await RenderSectionAsync("Scripts", required: false)    
+    @await Component.InvokeAsync("NToastNotify")
 </body>
 
 </html>
