Global exception finished

--- a/YouTube.Plumbing/Views/_ViewImports.cshtml
+++ b/YouTube.Plumbing/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using YouTube.Plumbing.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using EntityLayer.Identity.ViewModels;
+@using CoreLayer.Models;
