--- a/YouTube.Plumbing/Areas/Admin/Views/_ViewImports.cshtml
+++ b/YouTube.Plumbing/Areas/Admin/Views/_ViewImports.cshtml
@@ -7,3 +7,4 @@
 @using EntityLayer.WebApplication.ViewModels.Service;
 @using EntityLayer.WebApplication.ViewModels.Team;
 @using EntityLayer.WebApplication.ViewModels.Testimonal;
+@using CoreLayer.Models;
