--- a/YouTube.Plumbing/Areas/Admin/Views/About/UpdateAbout.cshtml
+++ b/YouTube.Plumbing/Areas/Admin/Views/About/UpdateAbout.cshtml
@@ -23,8 +23,8 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="RowVersion" />
-            <input type="hidden" asp-for="FileName" value="test" />
-            <input type="hidden" asp-for="FileType" value="test" />
+            <input type="hidden" asp-for="FileName" />
+            <input type="hidden" asp-for="FileType" />
             <div class="col-md-12">
                 <div class="form-floating">
                     <input asp-for="Header" type="text" class="form-control" placeholder="Header">
