--- a/YouTube.Plumbing/Areas/Admin/Views/Portfolio/UpdatePortfolio.cshtml
+++ b/YouTube.Plumbing/Areas/Admin/Views/Portfolio/UpdatePortfolio.cshtml
@@ -35,6 +35,8 @@
         <form asp-area="Admin" asp-controller="Portfolio" asp-action="UpdatePortfolio" method="post" class="row g-3" enctype="multipart/form-data">
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="RowVersion" />
+            <input type="hidden" asp-for="FileName" />
+            <input type="hidden" asp-for="FileType" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="col-md-12">
@@ -46,9 +48,9 @@
             </div>
             <div class="col-md-12">
                 <div class="form-floating">
-                    <input asp-for="Category.Name" type="text" class="form-control" placeholder="Category Name">
-                    <span asp-validation-for="Category.Name" class="text-danger"></span>
-                    <label asp-for="Category.Name">Call</label>
+                    <select asp-for="CategoryId" asp-items="@(new SelectList(Model.CategoryList,"Id","Name"))" class="form-control" placeholder="Category Name"></select>
+                    <span asp-validation-for="CategoryId" class="text-danger"></span>
+                    <label asp-for="CategoryId">Call</label>
                 </div>
             </div>
             <div class="col-md-12">
