--- a/YouTube.Plumbing/Areas/Admin/Views/Team/UpdateTeam.cshtml
+++ b/YouTube.Plumbing/Areas/Admin/Views/Team/UpdateTeam.cshtml
@@ -32,6 +32,10 @@
             <form asp-area="Admin" asp-controller="Team" asp-action="UpdateTeam" method="post" class="row g-3" enctype="multipart/form-data">
                 <input type="hidden" asp-for="Id" />
                 <input type="hidden" asp-for="RowVersion" />
+                <input type="hidden" asp-for="FileName" />
+                <input type="hidden" asp-for="FileType" />
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
 
                 <div class="col-md-12">
                     <div class="form-floating">
