--- a/YouTube.Plumbing/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/YouTube.Plumbing/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
 
     <!-- ======= Header ======= -->
     <header id="header" class="header fixed-top d-flex align-items-center">
-        
+
         <div class="d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center">
                 <img src="~/Admin/assets/img/folder.png" alt="Admin Panel">
@@ -49,9 +49,11 @@
             <ul class="d-flex align-items-center">
                 <li> <a class="btn btn-outline-info me-2" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house-door"></i></a></li>
                 <li> <a class="btn btn-outline-warning me-2" asp-area="User" asp-controller="Dashboard" asp-action="Index"><i class="bi bi-person-bounding-box"></i></a></li>
+                <li> <a class="btn btn-outline-danger me-2" asp-area="User" asp-controller="AuthenticationUser" asp-action="Logout"><i class="bi bi-box-arrow-right"></i></a></li>
+
             </ul>
         </nav><!-- End Icons Navigation -->
-                
+
     </header><!-- End Header -->
     <!-- ======= Sidebar ======= -->
     <aside id="sidebar" class="sidebar">
@@ -143,7 +145,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)    
+    @await RenderSectionAsync("Scripts", required: false)
     @await Component.InvokeAsync("NToastNotify")
 </body>
 
