--- a/YouTube.Plumbing/Areas/Admin/Views/_ViewImports.cshtml
+++ b/YouTube.Plumbing/Areas/Admin/Views/_ViewImports.cshtml
@@ -8,3 +8,4 @@
 @using EntityLayer.WebApplication.ViewModels.Team;
 @using EntityLayer.WebApplication.ViewModels.Testimonal;
 @using CoreLayer.Models;
+@using EntityLayer.Identity.ViewModels;
