--- a/YouTube.Plumbing/Areas/User/Views/Shared/_Layout.cshtml
+++ b/YouTube.Plumbing/Areas/User/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
 
         <!-- i will add picture here-->
 
-        @await Component.InvokeAsync("Layout",ViewBag.Username);
+        @await Component.InvokeAsync("Layout",ViewBag.Id);
 
 
         <ul class="sidebar-nav" id="sidebar-nav">
