before fixing errors

--- a/YouTube.Plumbing/Views/_ViewImports.cshtml
+++ b/YouTube.Plumbing/Views/_ViewImports.cshtml
@@ -3,3 +3,10 @@
 @using EntityLayer.Identity.ViewModels;
 @using CoreLayer.Models;
 @using EntityLayer.WebApplication.ViewModels.HomePage;
+@using EntityLayer.WebApplication.ViewModels.AboutVM;
+@using EntityLayer.WebApplication.ViewModels.Service;
+@using EntityLayer.WebApplication.ViewModels.Portfolio;
+@using EntityLayer.WebApplication.ViewModels.Category;
+@using EntityLayer.WebApplication.ViewModels.Testimonal;
+@using EntityLayer.WebApplication.ViewModels.Team;
+@using EntityLayer.WebApplication.ViewModels.Contact;
