--- a/YouTube.Plumbing/Views/Shared/_Layout.cshtml
+++ b/YouTube.Plumbing/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
     <script src="~/eNno/assets/vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script src="~/eNno/assets/js/main.js"></script>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
