--- a/YouTube.Plumbing/Views/Shared/Components/Team/Default.cshtml
+++ b/YouTube.Plumbing/Views/Shared/Components/Team/Default.cshtml
@@ -14,7 +14,7 @@
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                     <div class="member">
-                        <img src="~/images/@item.FileName" style="height:400px; width:auto;" alt="Team Members">
+                        <img src="~/images/@item.FileName" alt="Team Members">
                         <h4>@item.FullName</h4>
                         <span>@item.Title</span>
                         <div class="social">
