--- a/YouTube.Plumbing/Views/Shared/Components/About/Default.cshtml
+++ b/YouTube.Plumbing/Views/Shared/Components/About/Default.cshtml
@@ -9,7 +9,24 @@
             <div class="row">
                 <div class="col-lg-6 ">
                     <img src="~/images/@item.FileName" class="img-fluid" alt="Plumbing Company">
-
+                    <div class="social">
+                        @if (item.SocialMedia.Twitter != null || item.SocialMedia.Twitter == string.Empty)
+                        {
+                            <a href="@item.SocialMedia.Twitter"><i class="bi bi-twitter"></i></a>
+                        }
+                        @if (item.SocialMedia.FaceBook != null || item.SocialMedia.FaceBook == string.Empty)
+                        {
+                            <a href="@item.SocialMedia.FaceBook"><i class="bi bi-facebook"></i></a>
+                        }
+                        @if (item.SocialMedia.Instagram != null || item.SocialMedia.Instagram == string.Empty)
+                        {
+                            <a href="@item.SocialMedia.Instagram"><i class="bi bi-instagram"></i></a>
+                        }
+                        @if (item.SocialMedia.LinkedIn != null || item.SocialMedia.LinkedIn == string.Empty)
+                        {
+                            <a href="@item.SocialMedia.LinkedIn"><i class="bi bi-linkedin"></i></a>
+                        }
+                    </div>
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                     <h3>@item.Header</h3>
