--- a/YouTube.Plumbing/Views/Shared/_Layout.cshtml
+++ b/YouTube.Plumbing/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
 
         <div class="container d-flex align-items-center justify-content-between">
 
-            <h1 class="logo"><a href="index.html">HD|Plumbing</a></h1>
+            <h1 class="logo">HD|Plumbing</h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             @*  <a href="#" class="logo"><img src="~/eNno/assets/img/apple-touch-icon.png" alt="Plumbing Company" class="img-fluid"></a> *@
 
